Add SARIMA and XGBoost modeling for sales forecasting
Introduced SARIMA and XGBoost models for time series sales forecasting, including data preparation, model fitting, evaluation, and RMSE comparison. Refactored preprocessing to separate scaled and unscaled datasets, and updated code cells to reflect these changes.

--- a/Rossman Sales Forecasting.ipynb
+++ b/Rossman Sales Forecasting.ipynb
@@ -1244,16 +1244,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "scaler = MinMaxScaler()\n",
-        "store_merged[numeric_cols] = scaler.fit_transform(store_merged[numeric_cols])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "store_merged = pd.get_dummies(store_merged, columns=categorical_cols, prefix=categorical_cols) "
       ]
     },
@@ -1263,7 +1253,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "store_merged.sample(10)"
+        "store_merged_scaled = store_merged.copy()\n",
+        "scaler = MinMaxScaler()\n",
+        "store_merged_scaled[numeric_cols] = scaler.fit_transform(store_merged_scaled[numeric_cols])"
       ]
     },
     {
@@ -1272,7 +1264,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "store_merged.info()"
+        "store_merged_scaled.sample(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "store_merged_scaled.info()"
       ]
     },
     {
@@ -1282,7 +1283,9 @@
       "outputs": [],
       "source": [
         "store_merged[numeric_cols] = store_merged[numeric_cols].astype('float32')\n",
-        "store_merged = store_merged.astype({col: 'float32' for col in store_merged.select_dtypes('uint8').columns})"
+        "store_merged = store_merged.astype({col: 'float32' for col in store_merged.select_dtypes('uint8').columns})\n",
+        "store_merged_scaled[numeric_cols] = store_merged_scaled[numeric_cols].astype('float32')\n",
+        "store_merged_scaled = store_merged_scaled.astype({col: 'float32' for col in store_merged_scaled.select_dtypes('uint8').columns})"
       ]
     },
     {
@@ -1291,7 +1294,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "store_merged.columns"
+        "store_merged_scaled.columns"
       ]
     },
     {
@@ -1556,7 +1559,215 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "train_arima = train.resample('w').mean()\n",
+        "train_arima = train_arima[['Sales']]\n",
+        "train_arima.plot()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### First model : Sarima"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Define the p, d and q parameters to take any value between 0 and 3\n",
+        "p = d = q = range(0, 2)\n",
+        "\n",
+        "# Generate all different combinations of p, q and q triplets\n",
+        "pdq = list(itertools.product(p, d, q))\n",
+        "\n",
+        "# Generate all different combinations of seasonal p, q and q triplets\n",
+        "seasonal_pdq = [(x[0], x[1], x[2], 12) for x in list(itertools.product(p, d, q))]\n",
+        "\n",
+        "print('Examples of parameter combinations for Seasonal ARIMA: ')\n",
+        "print('SARIMAX: {} x {}'.format(pdq[1], seasonal_pdq[1]))\n",
+        "print('SARIMAX: {} x {}'.format(pdq[1], seasonal_pdq[2]))\n",
+        "print('SARIMAX: {} x {}'.format(pdq[2], seasonal_pdq[3]))\n",
+        "print('SARIMAX: {} x {}'.format(pdq[2], seasonal_pdq[4]))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Determing p,d,q combinations with AIC scores.\n",
+        "for param in pdq:\n",
+        "    for param_seasonal in seasonal_pdq:\n",
+        "        try:\n",
+        "            mod = sm.tsa.statespace.SARIMAX(train_arima,\n",
+        "                                            order=param,\n",
+        "                                            seasonal_order=param_seasonal,\n",
+        "                                            enforce_stationarity=False,\n",
+        "                                            enforce_invertibility=False)\n",
+        "\n",
+        "            results = mod.fit()\n",
+        "\n",
+        "            print('ARIMA{}x{}12 - AIC:{}'.format(param, param_seasonal, results.aic))\n",
+        "        except:\n",
+        "            continue"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Fitting the data to SARIMA model \n",
+        "model_sarima = sm.tsa.statespace.SARIMAX(train_arima,\n",
+        "                                        order=(1, 1, 1),\n",
+        "                                        seasonal_order=(1,1,1,12),\n",
+        "                                        enforce_stationarity=False,\n",
+        "                                        enforce_invertibility=False)\n",
+        "results_sarima= model_sarima.fit()\n",
+        "print(results_sarima.summary().tables[1])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Checking diagnostic plots\n",
+        "results_sarima.plot_diagnostics(figsize=(16, 10))\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from math import sqrt\n",
+        "# Model prediction \n",
+        "\n",
+        "pred = results_sarima.get_prediction(start=pd.to_datetime('2015-1-4'), dynamic=False)\n",
+        "\n",
+        "# Get confidence interval of forecast \n",
+        "pred_ci = pred.conf_int()\n",
+        "\n",
+        "ax = train_arima['2014':].plot(label='Observed', figsize=(15,7))\n",
+        "pred.predicted_mean.plot(ax=ax, label='One step ahed Forecast', alpha=1)\n",
+        "\n",
+        "ax.fill_between(pred_ci.index, \n",
+        "               pred_ci.iloc[:, 0],\n",
+        "               pred_ci.iloc[:,1],\n",
+        "               color='r', alpha=.1)\n",
+        "\n",
+        "ax.set_xlabel('Date')\n",
+        "ax.set_ylabel('Sales')\n",
+        "plt.legend()\n",
+        "plt.show()\n",
+        "\n",
+        "train_arima_forecasted = pred.predicted_mean\n",
+        "train_arima_truth = train_arima['2015-01-04':]\n",
+        "\n",
+        "rms_arima= sqrt(mean_squared_error(train_arima_truth,train_arima_forecasted))\n",
+        "print('Root Mean Squared Error = ',rms_arima)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ts_xgboost = store_merged.copy()\n",
+        "ts_xgboost = ts_xgboost.drop(['Customers', 'SalesPerCustomer'], axis=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ts_xgboost['CompetitionDistance'] = np.log1p(ts_xgboost['CompetitionDistance'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ts_xgboost['CompetitionOpen'] = 12 * (ts_xgboost.Year - ts_xgboost.CompetitionOpenSinceYear) + (ts_xgboost.Month - ts_xgboost.CompetitionOpenSinceMonth)\n",
+        "ts_xgboost['PromoOpen'] = 12 * (ts_xgboost.Year - ts_xgboost.Promo2SinceYear) + (ts_xgboost.WeekofYear - ts_xgboost.Promo2SinceWeek) / 4.0\n",
+        "ts_xgboost = ts_xgboost.drop([\"CompetitionOpenSinceMonth\", \"CompetitionOpenSinceYear\"], axis = 1)\n",
+        "ts_xgboost = ts_xgboost.drop([\"Promo2SinceWeek\", \"Promo2SinceYear\"], axis = 1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ts_xgboost.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "features = ts_xgboost.drop([\"Sales\"], axis = 1)\n",
+        "target = ts_xgboost[\"Sales\"]\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = model_selection.train_test_split(features, target, test_size = 0.20)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from xgboost import XGBRegressor\n",
+        "import xgboost as xgb\n",
+        "# Tuning parameters - using default metrics\n",
+        "params = {'max_depth':6, \"booster\": \"gbtree\", 'eta':0.3, 'objective':'reg:linear'} \n",
+        "\n",
+        "dtrain = xgb.DMatrix(X_train, y_train)\n",
+        "dtest = xgb.DMatrix(X_test, y_test)\n",
+        "watchlist = [(dtrain, 'train'), (dtest, 'eval')]\n",
+        "\n",
+        "# Training the model\n",
+        "xgboost = xgb.train(params, dtrain, 100, evals=watchlist,early_stopping_rounds= 100, verbose_eval=True)\n",
+        "         \n",
+        "# Making predictions\n",
+        "preds = xgboost.predict(dtest)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rms_xgboost = sqrt(mean_squared_error(y_test, preds))\n",
+        "print(\"Root Mean Squared Error for XGBoost:\", rms_xgboost)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### SARIMA RMSE = 867.955 , XGBoost RMSE = 1170.682"
+      ]
     }
   ],
   "metadata": {
