Update Rossman Sales Forecasting.ipynb

--- a/Rossman Sales Forecasting.ipynb
+++ b/Rossman Sales Forecasting.ipynb
@@ -1569,7 +1569,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### First model : Sarima"
+        "### First model : SARIMAX"
       ]
     },
     {
@@ -1676,6 +1676,13 @@
         "\n",
         "rms_arima= sqrt(mean_squared_error(train_arima_truth,train_arima_forecasted))\n",
         "print('Root Mean Squared Error = ',rms_arima)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Second model : XGBoost"
       ]
     },
     {
