Add LightGBM model for sales forecasting
Introduced LightGBM as an additional regression model for sales forecasting. Added installation, data preparation, model training with early stopping, prediction, and RMSE evaluation. Updated markdown to compare SARIMA, LGBM, and XGBoost performance.

--- a/Rossman Sales Forecasting.ipynb
+++ b/Rossman Sales Forecasting.ipynb
@@ -1770,10 +1770,81 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install lightgbm"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import lightgbm as lgb\n",
+        "train_data = lgb.Dataset(X_train, label=y_train)\n",
+        "test_data = lgb.Dataset(X_test, label=y_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "params = {\n",
+        "    'objective': 'regression',\n",
+        "    'metric': 'rmse',\n",
+        "    'boosting_type': 'gbdt',\n",
+        "    'num_leaves': 31,\n",
+        "    'learning_rate': 0.05,\n",
+        "    'feature_fraction': 0.9,\n",
+        "    'bagging_fraction': 0.8,\n",
+        "    'bagging_freq': 5,\n",
+        "    'max_depth': -1,\n",
+        "    'verbose': -1,\n",
+        "    'random_state': 42\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "lgb_model = lgb.train(\n",
+        "    params,\n",
+        "    train_data,\n",
+        "    valid_sets=[train_data, test_data],\n",
+        "    num_boost_round=1000,\n",
+        "    callbacks=[\n",
+        "        # Early stopping after 100 rounds with no improvement\n",
+        "        lgb.early_stopping(stopping_rounds=100),\n",
+        "        lgb.log_evaluation(period=100)  # Log every 100 rounds\n",
+        "    ]\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_pred = lgb_model.predict(X_test, num_iteration=lgb_model.best_iteration)\n",
+        "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+        "print(f\"✅ Root Mean Squared Error (RMSE): {rmse:.2f}\")\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### SARIMA RMSE = 867.955 , XGBoost RMSE = 1170.682"
+        "### SARIMA > LGBM > XGBoost "
       ]
     }
   ],
